--- a/Implementation/frontend-angular/package.json
+++ b/Implementation/frontend-angular/package.json
@@ -28,18 +28,18 @@
     "@angular-devkit/build-angular": "~12.2.4",
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
-    "@types/d3": "^7.0.0",
+    "@types/d3": "^7.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "@types/ol": "~6.5.0",
-    "d3": "^7.0.1",
+    "@types/ol": "^6.5.3",
+    "d3": "^7.1.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ol": "~6.5.0",
+    "ol": "^6.5.0",
     "typescript": "~4.3.5"
   }
 }
