--- a/Implementation/frontend-angular/package.json
+++ b/Implementation/frontend-angular/package.json
@@ -15,10 +15,15 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@types/chart.js": "^2.9.34",
     "@types/d3-scale": "^4.0.1",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^3.6.0",
     "d3-scale-chromatic": "^3.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
